--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,15 @@ script:
   - exec ./scripts/test.sh
 jobs:
   include:
+      - env:
+        - NEO4J_VERSION=4.2-enterprise
+        - POSTGRES_VERSION=10
+    - env:
+        - NEO4J_VERSION=4.2-enterprise
+        - POSTGRES_VERSION=11
+    - env:
+        - NEO4J_VERSION=4.2-enterprise
+        - POSTGRES_VERSION=12
     - env:
         - NEO4J_VERSION=3.5-enterprise
         - POSTGRES_VERSION=10
